<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/_1_the_capital_of_france_is"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Write here" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_2_asia_is_a"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/question_2_Continent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="12dp"
            android:text="@string/continent" />

        <CheckBox
            android:id="@+id/question_2_Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/country" />

        <CheckBox
            android:id="@+id/question_2_Largest_Continent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="12dp"
            android:text="@string/largest_continent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_3_largest_country_in_africa_in_terms_of_land_size_is"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group_question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_3_Angola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="0dp"
                android:text="@string/angola" />

            <RadioButton
                android:id="@+id/question_3_Sudan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/sudan" />

            <RadioButton
                android:id="@+id/question_3_Algeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/algeria" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/_4_india_is_in"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/question_4_east_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="East Asia" />

            <CheckBox
                android:id="@+id/question_4_africa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="12dp"
                android:text="Africa" />

            <CheckBox
                android:id="@+id/question_4_south_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="South Asia" />

        </RadioGroup>

        <Button
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="22dp"
            android:onClick="startEvaluation"
            android:text="@string/result" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>

